BPER/DEVF/force-app/main/default/objects/CH_ProposteSimulazioniPreventivi__c/CH_ProposteSimulazioniPreventivi__c.object-meta.xml
<CustomObject>
    <label>CH - Proposte/Simulazioni/Preventivi</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH - Nome Proposte/Simulazioni/Preventiv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH - Proposte/Simulazioni/Preventivi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>