BPER/DEVF/force-app/main/default/objects/CH_ProposteSimulazioniPreventivi__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CH - Proposte/Simulazioni/Preventivi</relationshipLabel>
    <relationshipName>CH_Proposte_Simulazioni_Preventivi</relationshipName>
    <type>Lookup</type>
</CustomField>