BPER/DEVF/force-app/main/default/objects/CH_ProposteSimulazioniPreventivi__c/fields/CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>