BPER/DEVF/force-app/main/default/objects/CH_ProposteSimulazioniPreventivi__c/fields/CRM_UnitaOrganizzativa__c.field-meta.xml
<CustomField>
    <fullName>CRM_UnitaOrganizzativa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unità Organizzativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>